# ML_Module5

./: .gitignore  PKG-INFO  README.md  module_1_poetry-0.1.0-py3-none-any.whl  pyproject.toml
model/: catboost_model.joblib  random_forest_model.joblib
notebooks/: Module_1.ipynb
notebooks/.ipynb_checkpoints/: Module_1-checkpoint.ipynb
notebooks/catboost_info/: catboost_training.json  learn_error.tsv  test_error.tsv  time_left.tsv
notebooks/catboost_info/learn/: events.out.tfevents
notebooks/catboost_info/test/: events.out.tfevents
results_data/: prediction.csv  prediction_catboost.csv  prediction_cb.csv  prediction_random_forest.csv  prediction_rf.csv
src/: main.py  model.py  models.py  preprocessing.py  utils.py
tests/: test_models.py
