[project]
name = "module-1-poetry"
version = "0.1.0"
description = "A data science project for predicting Space Titanic survivors using machine learning models like Random Forest + Catboost"
authors = [
    {name = "Kozlov Dmitry",email = "kozlovdmitrij796@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pandas (>=2.2.3,<3.0.0)",
    "numpy (>=1.16.0,<2.0)",
    "matplotlib (>=3.10.1,<4.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "scikit-learn (>=1.6.1,<2.0.0)",
    "notebook (>=7.3.2,<8.0.0)",
    "jupyter (>=1.1.1,<2.0.0)",
    "catboost (>=1.2.7,<2.0.0)",
    "optuna (>=4.2.1,<5.0.0)",
    "clearml (>=1.18.0,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
[tool.poetry]
packages = [
    { include = "src" }
]
